--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -51,6 +51,78 @@
 
 
 
+
+  <h2>[The next catastrophe - June 27-July 3rd 2020]</h2>
+
+  <p>
+    <h3>The world this week - Politics</h3>
+
+    Some states in the south and west of the United States recorded their biggest daily rise in cases of covid-19, bringing America's total to over 2.3m. The governor of Texas, Greg Abbott, urged people to stay indoors. He also declared that the state remained "wide open for business". California recorded new highs in hospital admissions. Connecticut, New Jersey and New York are to quarantine visitors  from states that are covid hotspots.<br><br>
+
+    Donald Trump sacked Geoffrey Berman as the federal prosecutor for Manhattan. Mr Berman's office had successfully prosecuted Mr Trump's former lawyer (Br Berman was recused from the case) and is investigating his current one, Rudy Giuliani.<br><br>
+
+    Less than a month after the killing of George Floyd in Minneapolis, an attempt to reform police procedures in Minnesota came to naught when Democrats and Republicans failed to reach a compromise in the state legislature.<br><br>
+
+    Suriname's president, Desi Bouterse, who has dominated the country's politics for more than 40 years, conceded defeat in an election held on May 25th. His likely successor is Chan Santokhi, of the mainly Indo-Surinamese Progressive Reform Party. In November a military court found Mr Bouterse guilty of murdering 15 political opponents in 1982.<br><br>
+
+    Brazilian police arrested a former aide to Flavio Bolsonaro, the eldest son of the president, Jair Bolsonaro, in  an investigation into corruption. Flavio, a senator, is himself being investigated for possible involvement in the scheme when he was a state deputy in Rio de Janeiro.<br><br>
+
+    Brazil's education minister, Abraham Weintraub, resigned after the Supreme Court included him in an inquiry of a criminal scheme to spread slurs and threats directed at its judges. Mr Weintraub had described the judges as "bums" who should be  jailed. He has flown to America.<br><br>
+
+    Singapore called an early election on July 10th. Lee Hsien Loong, the prime minister, has said he will step down during the next parliamentary term. Negative campaigning is effectively banned, which makes it hard for the opposition.<br><br>
+
+    Almazbek Atambayev, a former president of Kyrgyzstan, was sentenced to prison for 11 years for illegally releasing a crime boss, who subsequently fled to Russia. Mr Atambayev was arrested in August after throngs of soldiers and police stormed his compound.<br><br>
+
+    India expelled half the staff at Pakistan's embassy in Delhi, accusing them of spying and working for terrorists. Pakistan's foreign ministry said it had responded in kind, telling half the diplomats at India's embassy in Islamabad to leave.<br><br>
+
+    After blowing up their joint liaison office, North Korea tried to de-escalate tensions with South Korea by saying it would not take any further action. The North had threatened to deploy troops in the demilitarised zone between the two countries to punish the South for letting activists send pamphlets critical of Kim Jong Un, the North's despot, over the border by balloon.<br><br>
+
+    America named four more Chinese media organisations operating in the United States as government foreign missions. The State Department said the four--CCTV, China News Service, the People's Daily and Global Times--produced propaganda for the Chinese Communist Party.<br><br>
+
+    The installation of china's Beidou navigation system was completed with the placing in orbit of its final satellite. Beidou, a rival to America's GPS, has taken two decades to build.<br><br>
+
+    China charged two Canadians with spying, more than 18 months after they were arrested. China is widely thought to be keeping the men in custody in response to Canada's detention of a senior executive of Huawei following an extradition request from America.<br><br>
+
+    Police in Tanzania arrested Zitto Kabwe, an opposition leader. He was charged with "endangering the peace" after meeting supporters. To prepare for an election in October the government has arrested journalists, closed newspapers and harassed dissidents.<br><br>
+
+    Malawians voted in a re-run of a presidential election after courts overturned the results of a rigged one supposedly won last year by the incumbent, Peter Mutharika. Electoral officials have eight days to release the count.<br><br>
+
+    A suicide-bomber killed two people in an attack on a Turkish military base in Somalia that was claimed by al-Shabab, a jihadist group. Turkey is helping to train Somali soldiers.<br><br>
+
+    Egypt's president, Abdel-Fattah al-Sisi, threatened to intervene in neighbouring Libya if Turkish-backed militias captured Sirte, a strategic port, from Khalifa Haftar, a rebellious general who is also backed by Russia. The militias have been moving towards General Haftar's heartland in the east.<br><br>
+
+    Prosecutors from a court in The Hague said they were charging Hashim Thaci, the president of Kosovo, with war crimes, murder and torture relating to the period during and immediately after the war there in 1999. Mr Thaci had been about to attend a summit at the White House, but cancelled his visit.<br><br>
+
+    <h3>The world this week - Business</h3>
+
+    The IMF drastically reduced its outlook for the world economy, projecting that it will contract by 4.9% this year. The downward revision was across the board; all regions will suffer shrinkage. America's GDP is now expected to fall by 8%, Britain's and the euro area's both by 10.2% and Japan's by 5.8% Most emerging markets will fare little better. China, though, is forecast to grow by 1%.<br><br>
+
+    Andrew Bailey, the governor of the Bank of England, said that he  doesn't want its bond-buying programme to become a "permanent feature" of the British economy. In a shift of policy from his  predecessor, Mark Carney, Mr Bailey indicated that it "would be better to consider adjusting the level of reserves first" before raising interest rates. The central bank recently increased its quantitative-easing programme by $125bn.<br><br>
+
+    The pentagon released a list of 20 companies and  state-controlled enterprises it believes are owned or supported  by the Chinese army. The publication of the list, which includes Huawei, is mostly symbolic. Congress required the Pentagon to catalogue entities with ties to China's armed forces in 1999, but no document had ever been made public before.<br><br>
+
+    Wirecard, a German digital payments company, filed for insolvency after Markus Braun, its chief executive, was arrested to answer allegations of fraud. The company has admitted that $2.1bn held on its balance-sheet probably does not exist. In what is one of Europe's biggest accounting scandals in recent years, Wirecard acknowledged the money was phantom after two banks in the Philippines where it supposedly had been deposited denied having ever received it.<br><br>
+
+    Bayer agreed to pay up to $10.9bn to settle claims that its Roundup weedkiller causes cancer. The German drugs and chemicals company inherited the claims when it bought Monsanto, Roundup's maker, in 2018. It might have to make further payouts to those plaintiffs who are refusing to settle.<br><br>
+
+    Apple said it would start offering desktop and laptop computers powered by chips designed in-house, rather than those from Intel, its current supplier. The chips, derived from designs by ARM, which is based in Britain, will be similar to those that already power its smartphones and tablets. Apple hopes that the ability to run software across multiple devices might boost sales of its Mac computers.<br><br>
+
+    Brazil's central bank blocked Facebook's digital-payments service on WhatsApp because it had yet to complete its analysis of the implications. WhatsApp Pay was launched in Brazil just a week ago.<br><br>
+
+    Business organisations int America were angered by Donald Trump's decision to expand the scope of restrictions on immigrant visas for workers. Mr trump claims this will protect American jobs. But the head of the US Chamber of Commerce, Thomas Donohue, warned that the measures will reduce job creation.<br><br>
+
+    GVS, an Italian maker of personal equipment to protect against biohazards, went public on the Milan stock exchange, in Europe's second biggest IPO of the year so far.<br><br>
+
+    SoftBank sold most of its stake in T-Mobile. The Japanese conglomerate raised almost $20bn by selling shares on the stockmarket and it a private tender, a signal to investors that it still has financial clout following some disastrous investments that left it with an $8.8bn annual loss. Meanwhile, Son Masayoshi, SoftBank's chief executive, stepped down from the board of Alibaba, bringing an end to the firms' close relationship.<br><br>
+
+    The British government confirmed that pubs, restaurants and other services such as hairdressers will be allowed to reopen in England on July 4th. Britain has lagged behind France, Italy and other European countries in easing restrictions. Hotels have seen a surge in bookings for July and beyond, but if infections rise again it will be a short-lived break for holiday-makers.<br><br>
+
+    Perhaps those looking to get away from it all could look to space. Virgin Galactic signed a deal with NASA this week to prepare a plan for taking feepaying passengers to the International Space Station. That may take some time; the company has yet to take space tourists on its less arduous suborbital flights.<br><br>
+
+    The pandemic has stranded many workers at home, and also sent millions to the unemployment line. But that has meant tech giants have done well as home offices are kitted out with equipment and people communicate remotely. The soaring stock of those companies, and others, has increased the wealth of their bosses and, as a consequence, America has gained nearly 30 new billionaires since March, according to the Institute for Policy Studies, a left-leaning think-tank. The top five are thought to be 26% richer collectively than before covid-19.<br><br>
+  </p>
+
+
   <h2>[The new world disorder - June 20th-26th 2020]</h2>
 
   <p>
@@ -443,31 +515,32 @@
       최소한 제가 생각하는 인디란 그런 것이에요.
       저는 해적선을 보고 싶어요.
       모두가 바다에 둥둥 떠 있는 모습은 보고 싶지 않아요.
-      - 제노바 첸(저니, 스카이, 플라워 등을 개발한 댓게임컴퍼니의 대표이자 크리에이티브 디렉터)</p>
+      - 제노바 첸(저니, 스카이, 플라워 등을 개발한 댓게임컴퍼니의 대표이자 크리에이티브 디렉터)
+    </p><br>
 
 
 
-  <br>
+  <br><br><br>
 
-    <ul style="background-color:#21618C" class="table">
-      <font size="6">INVENTORY</font>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
-      <br>
-      <font size="6">STATUS</font>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="active">Game Trends</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
-      <br>
-      <font size="6">SKILLS</font>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
-    </ul>
+  <ul style="background-color:#21618C" class="table">
+    <font size="6">INVENTORY</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
+    <br>
+    <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="active">Game Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
+    <br>
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
+  </ul>
 
 
 
