--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -48,86 +48,89 @@
   <div id="contents">
     <img src="Karazhan_library.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.65]</h1>
+    <h1>Karazhan Library[Lv.68]</h1>
 
     <p style="margin-top:45px;"><pre>
 
-    <h2><strong>경제[Lv.27]</h2></strong>
-      [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
-      [대한민국 부동산 흐름 읽는법]-신진수<br>
-      [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
-      [원더키디의 세대, IT는 우리의 일상을 어떻게 바꾸는가?]-이영복<br>
-      [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
-      [앞으로 10년 경제 대위기가 온다]-정동희<br>
-      [부의 본능]-브라운스톤<br>
-      [빅스텝]-박혜정<br>
-      [직장인의 은퇴없는 실전 주식투자]-차영주<br>
-      [에이트]-이지성<br>
-      [주식투자 매도하는 법부터 배워라]-김중근<br>
-      [전설로 떠나는 월가의 영웅]-피터 린치<br>
-      [기업공시 완전 정복]-김수헌<br>
-      [알아두면 쓸모 있는 IT 상식]-정철환<br>
-      [빅데이터, 사람을 읽다]-BC카드 빅데이터센터<br>
-      [영리한 베트남 투자]-최근환<br>
-      [재무제표 행간을 읽어라]-김대욱<br>
-      [내일의 부: 알파편]-조던 김상섭<br>
-      [내일의 부: 오메가편]-조던 김상섭<br>
-      [시장의 기억]-이태호<br>
-      [코로나 이후의 세계]-제이슨 솅커<br>
-      [디플레 전쟁]-홍춘욱<br>
-      2X[세상 친절한 경제상식]-토리텔러<br>
-      [머니]-롭 무어<br>
-      [돈의 속성]-김승호<br>
-      [해외 ETF 백과사전]-김태현<br>
+    <h2><strong>경제[Lv.28]</h2></strong>
+      [주식투자의 법칙]-제시 리버모어<br>
       [부자들의 습관 버티는 기술]-김광주<br>
-    <h2><strong>역사[Lv.7]</h2></strong>
-      <b>3x[거의 모든 IT의 역사]-정지훈</b><br>
-      2x[약자를 위한 현실주의]-이주희<br>
-      [알렉산드로스 제국의 눈물]-제임스 롬<br>
-      [하멜표류기]-헨드릭 하멜<br>
-      [하룻밤에 읽는 한국 근현대사]-최용범<br>
-      [세상에서 가장 쉬운 세계사]-천레이<br>
+      [해외 ETF 백과사전]-김태현<br>
+      [돈의 속성]-김승호<br>
+      [머니]-롭 무어<br>
+      2X[세상 친절한 경제상식]-토리텔러<br>
+      [디플레 전쟁]-홍춘욱<br>
+      [코로나 이후의 세계]-제이슨 솅커<br>
+      [시장의 기억]-이태호<br>
+      [내일의 부: 오메가편]-조던 김상섭<br>
+      [내일의 부: 알파편]-조던 김상섭<br>
+      [재무제표 행간을 읽어라]-김대욱<br>
+      [영리한 베트남 투자]-최근환<br>
+      [빅데이터, 사람을 읽다]-BC카드 빅데이터센터<br>
+      [알아두면 쓸모 있는 IT 상식]-정철환<br>
+      [기업공시 완전 정복]-김수헌<br>
+      [전설로 떠나는 월가의 영웅]-피터 린치<br>
+      [주식투자 매도하는 법부터 배워라]-김중근<br>
+      [에이트]-이지성<br>
+      [직장인의 은퇴없는 실전 주식투자]-차영주<br>
+      [빅스텝]-박혜정<br>
+      [부의 본능]-브라운스톤<br>
+      [앞으로 10년 경제 대위기가 온다]-정동희<br>
+      [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
+      [원더키디의 세대, IT는 우리의 일상을 어떻게 바꾸는가?]-이영복<br>
+      [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
+      [대한민국 부동산 흐름 읽는법]-신진수<br>
+      [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
+    <h2><strong>역사[Lv.8]</h2></strong>
+      [하룻밤에 읽는 영국사]-안병억<br>
       [하룻밤에 읽는 한국사]-최용범<br>
+      [세상에서 가장 쉬운 세계사]-천레이<br>
+      [하룻밤에 읽는 한국 근현대사]-최용범<br>
+      [하멜표류기]-헨드릭 하멜<br>
+      [알렉산드로스 제국의 눈물]-제임스 롬<br>
+      2x[약자를 위한 현실주의]-이주희<br>
+      <b>3x[거의 모든 IT의 역사]-정지훈</b><br>
     <h2><strong>철학[Lv.4]</h2></strong>
-      [내 안의 나를 깨우는 장자 외편]-장자<br>
-      [그래서 철학이 필요해]-고바야시 쇼테이<br>
-      [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
       [인간과 좀비의 목숨을 건 철학수업]-사쿠라 츠요시<br>
-    <h2><strong>심리학[Lv.3]</h2></strong>
-      [나도 아직 나를 모른다]-허지원<br>
-      [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
+      [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
+      [그래서 철학이 필요해]-고바야시 쇼테이<br>
+      [내 안의 나를 깨우는 장자 외편]-장자<br>
+    <h2><strong>심리학[Lv.4]</h2></strong>
+      [자제력 수업]-피터 홀린스<br>
       [삶이 괴롭냐고 심리학이 물었다]-게일 브레너<br>
+      [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
+      [나도 아직 나를 모른다]-허지원<br>
     <h2><strong>처세술[Lv.7]</h2></strong>
-      2x[침묵이라는 무기]-코르넬리아 토프<br>
-      [마음을 훔치는 대화법]-임철웅<br>
-      [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤<br>
-      [승자의 결단과 전략, 오륜서]-마야모토 무사시<br>
-      [제갈량문집]-제갈량<br>
-      [손자병법]-손자<br>
       [포사이트:미래를 꿰뚫어보는 힘]-비나 벤카타라만<br>
+      [손자병법]-손자<br>
+      [제갈량문집]-제갈량<br>
+      [승자의 결단과 전략, 오륜서]-마야모토 무사시<br>
+      [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤<br>
+      [마음을 훔치는 대화법]-임철웅<br>
+      2x[침묵이라는 무기]-코르넬리아 토프<br>
     <h2><strong>과학[Lv.2]</h2></strong>
-      [창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
       2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
+      2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
     <h2><strong>경영[Lv.3]</h2></strong>
       <b>3X[적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단</b><br>
       [채리티:워터]-스캇 해리슨<br>
       [반대의 놀라운 힘]-샬런 네메스<br>
     <h2><strong>소설[Lv.6]</h2></strong>
-      [82년생 김지영]-조남주<br>
-      [잠]-베르나르 베르베르<br>
-      <b>20X[삼국지]-나관중</b><br>
-      [데미안]-헤르만 헤세<br>
-      [위대한 개츠비]-스콧 피츠제럴드<br>
       [별을 위한 시간]-로버트 A. 하인라인<br>
+      [위대한 개츠비]-스콧 피츠제럴드<br>
+      [데미안]-헤르만 헤세<br>
+      <b>20X[삼국지]-나관중</b><br>
+      [잠]-베르나르 베르베르<br>
+      [82년생 김지영]-조남주<br>
     <h2><strong>자기계발[Lv.3]</h2></strong>
-      [기획자의 습관]-최장순<br>
       [최강 멘탈]-쓰지 유시후미<br>
       [지친 당신에게 고요를 선물합니다]-팀 콜린스<br>
+      2X[기획자의 습관]-최장순<br>
     <h2><strong>에세이[Lv.1]</h2></strong>
       [이창호의 부득탐승]-이창호
     <h2><strong>사회학[Lv.2]</h2></strong>
-      [재미란 무엇인가?]-벤 핀첨<br>
       [협력의 역설]-애덤 카헤인<br>
+      [재미란 무엇인가?]-벤 핀첨<br>
     </p></pre>
 
 
@@ -137,11 +140,13 @@
 
     <p><pre>
       <h2>2020년 7월 독서</h2>
-        <li>경제/경영:</li>
-        <li>역사:</li>
+        <li>경제/경영:[주식투자의 법칙]-제시 리버모어</li>
+        <li>역사:[하룻밤에 읽는 영국사]-안병억</li>
         <li>철학:</li>
         <li>심리학/처세술:[포사이트:미래를 꿰뚫어보는 힘]-비나 벤카타라만</li>
         <li>과학:</li>
+        <br>
+        <li>심리학:[자제력 수업]-피터 홀린스</li>
     </p></pre>
 
     <p><pre>
@@ -212,7 +217,7 @@
         <li>경제: [영리한 베트남 투자]-최근환</li>
         <li>경제: [재무제표 행간을 읽어라]-김대욱</li>
         <li>역사: [하룻밤에 읽는 한국 근현대사]-최용범</li>
-        <li>경제: [내일의 부: 알파편]-조던 김상섭<li>
+        <li>경제: [내일의 부: 알파편]-조던 김상섭</li>
     </p></pre>
 
     <p><pre>
@@ -259,27 +264,28 @@
         <li>처세술: [침묵이라는 무기]-코르넬리아 토프</li>
     </p></pre>
 
-    <br>
 
-    <ul style="background-color:#21618C" class="table">
-      <font size="6">INVENTORY</font>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="active">Karazhan Library</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
-      <br>
-      <font size="6">STATUS</font>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
-      <br>
-      <font size="6">SKILLS</font>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
-      <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
-    </ul>
+    <br><br><br>
+
+  <ul style="background-color:#21618C" class="table">
+    <font size="6">INVENTORY</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="active">Karazhan Library</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
+    <br>
+    <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
+    <br>
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
+  </ul>
 
   </div>
 </div>
