--- a/Merriam_Webster's.html
+++ b/Merriam_Webster's.html
@@ -51,7 +51,14 @@
 
 
 
-    [july 5th,2020]
+    [July 9th,2020]
+
+    <p>
+      Scanning the future for risks and taking proper note of what you see is a mark of prudent maturity. It is also a salutary expansion of the imagination. Governments which take seriously ways the near future could be quite unlike the recent past might find new avenues to explore and a new interest in sustaining their achievements well beyond a few turns of the electoral cycle. That is exactly the sort of attitude that stewwardship of the environment and the containment of armed conflict retuire. It can also be a relief. Almost all the large asteroids which can come close to the Earth have now  been found. None is a near-term threat. The world is not just a demonstrably safer place than it seemed. It is also a better place for having found it out.
+    </p><br>
+
+
+    [July 5th,2020]
 
     <p>
       One of the Fed's innovations was to offer longer-term swaps lasting 84 days. The first of these matured on June 11th, reducing the amount of dollars outstanding by almost $92bn. If the foreign banks that had borrowed these dollars (through the Bank of England's and the European Central Bank's swap lines with the Fed) still needed them, they would have rolled them over. But they did not--suggesting that the swaps had eased much of the stress that motivated them.
@@ -143,30 +150,32 @@
       /an abrupt jerking, swaying, or tipping movement<br>
       <b>Sleazy</b>: lacking firmness of texture
       / marked by low character or quality
-    </p>
+    </p><br>
 
 
-      <br><br>
 
-      <ul style="background-color:#21618C" class="table">
-        <font size="6">INVENTORY</font>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
-        <br>
-        <font size="6">STATUS</font>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
-        <br>
-        <font size="6">SKILLS</font>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="active">Merriam Webster's</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
-      </ul>
+
+  <br><br><br>
+
+  <ul style="background-color:#21618C" class="table">
+    <font size="6">INVENTORY</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
+    <br>
+    <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
+    <br>
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="active">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
+  </ul>
 
   </div>
 </div>
