--- a/Show_yourself.html
+++ b/Show_yourself.html
@@ -52,6 +52,19 @@
 
 
 
+
+    <a href="https://www.youtube.com/watch?v=aHaXT2TLSfM" target="_blank" title="5분 뚝딱 철학">
+      흄 : 자신까지 갖다버린 미니멀리스트</a><br>
+
+    <a href="https://www.youtube.com/watch?v=c_SYVVv19C8" target="_blank" title="5분 뚝딱 철학">
+      비트겐슈타인 : 원더풀 라이프</a><br>
+
+    <a href="https://www.youtube.com/watch?v=AYmvYTeERUg" target="_blank" title="5분 뚝딱 철학">
+      라캉 : 정신분석학 part 2 (무의식과 언어)</a><br>
+
+    <a href="https://www.youtube.com/watch?v=2tXlmnVmLUs" target="_blank" title="5분 뚝딱 철학">
+      라캉 : 정신분석학 part 1 (상상계, 상징계, 실재계)</a><br>
+
     <a href="https://www.youtube.com/watch?v=IZO4PU7oAGo" target="_blank" title="5분 뚝딱 철학">
       니체 : 니체 : 신은 죽었다. part 2</a><br>
 
@@ -1002,28 +1015,32 @@
       </p>
 
    <a href="https://www.youtube.com/watch?v=AOPue13SZe8" target="_blank" title="루틴">
-        성공하는 사람에겐 그만의 '루틴(routine)'이 있다!</a><br><br><br>
+        성공하는 사람에겐 그만의 '루틴(routine)'이 있다!</a><br>
 
 
-      <ul style="background-color:#21618C" class="table">
-        <font size="6">INVENTORY</font>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="active">Show Yourself</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
-        <br>
-        <font size="6">STATUS</font>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
-        <br>
-        <font size="6">SKILLS</font>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
-        <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
-      </ul>
+
+
+  <br><br><br>
+
+  <ul style="background-color:#21618C" class="table">
+    <font size="6">INVENTORY</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Show_yourself.html" class="active">Show Yourself</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="懲毖錄.html" class="inactive">懲毖錄</a></li>
+    <br>
+    <font size="6">STATUS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Game_industry_trends.html" class="inactive">Game Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="AI_industry_trends.html" class="inactive">AI Trends</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Science_and_technology.html" class="inactive">Science & Tech.</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_economist.html" class="inactive">The Economist</a></li>
+    <br>
+    <font size="6">SKILLS</font>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="The_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><a href="Merriam_Webster's.html" class="inactive">Merriam Webster's</a></li>
+    <li style="margin-top:10px; margin-bottom:10px;"><font size="4"><a href="夫學須靜也_才須學也.html" class="inactive">夫學須靜也 才須學也</a></font></li>
+  </ul>
 
 
 
