--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -53,7 +53,19 @@
 
 
 
-    <a href="https://www.youtube.com/playlist" target="_blank" title="쉬운바둑">
+    <a href="https://www.youtube.com/watch?v=yVwj56foff4" target="_blank" title="쉬운바둑">
+      [실전사활] 백집을 부수며 살아보세요~</a><br>
+
+    <a href="https://www.youtube.com/watch?v=sWPy-ih35Es" target="_blank" title="쉬운바둑">
+      (실전사활) 백이 막지않고 한칸 뛴다면?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=sWPy-ih35Es" target="_blank" title="쉬운바둑">
+      (실전사활) 백이 막지않고 한칸 뛴다면?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=go3egSgZHfQ" target="_blank" title="쉬운바둑">
+      (실전사활) 그동안 이걸 몰랐다니...</a><br>
+
+    <a href="https://www.youtube.com/watch?v=aa4l-QLW7nM" target="_blank" title="쉬운바둑">
       정석사활 #5</a><br>
 
     <a href="https://www.youtube.com/watch?v=go3egSgZHfQ" target="_blank" title="쉬운바둑">
