--- a/夫學須靜也_才須學也.html
+++ b/夫學須靜也_才須學也.html
@@ -51,6 +51,81 @@
 
 
 
+
+  <h3>[현지 조달이 전략이다]</h3>
+
+    <p>故智將務食於敵(고지장무식어적)<br>
+      그러므로 지혜로운 장수는 적으로부터 식량을 빼앗는데 힘쓴다.<br><br>
+
+      食敵一鐘(식적일종) 當吾二十鐘(당오이십종)<br>
+      적의 식량 1종을 먹는 것은 아군의 식량 20종에 해당되고,<br><br>
+
+      (芑心)秆一石(기간일석) 當吾二十石(당오이십석)<br>
+      (적의) 콩깍지와 볏짚 1섬은 아군의 20섬에 해당된다.<br><br>
+    </p><br>
+
+
+  <h3>[장기전의 폐해]</h3>
+
+    <p>
+      國之貧於師者遠輸(국지빈어사자원수)<br>
+      나라가 군대 때문에 가난해지는 까닭은 군수품을 멀리까지 수송하는 데에 있으니,<br><br>
+
+      遠輸則百姓貧(원수칙백성빈)<br>
+      군수품을 멀리까지 수송하게 되면 백성들은 가난해진다.<br><br>
+
+      近於師者貴賣(근어사자귀매)<br>
+      가까이에 군대가 있으면 물가는 비싸지고,<br><br>
+
+      貴賣則百姓竭(귀매칙백성갈)<br>
+      물가가 비싸지면 백성들의 재정이 고갈되고,<br><br>
+
+      財竭則急於丘役(재갈칙급어구역)<br>
+      재정이 고갈되면 백성들의 구역에 다급해진다.<br><br>
+
+      力屈財殫(역굴재탄)<br>
+      힘은 소진되고 재정은 고갈되어<br><br>
+
+      中原內虛於家(중원내허어가)<br>
+      중원 안으로는 집집마다 텅 비게 되고,<br><br>
+
+      百姓之費(백성지비) 十去其七(십거기칠)<br>
+      백성들의 비용은 열에 일곱이 사라진다.<br><br>
+
+      公家之費(공가지비)<br>
+      조정의 비용은<br><br>
+
+      破軍罷馬(파군파마) 甲冑矢弩(갑주시노) 戟楯蔽櫓(극순폐노) 丘牛大車(구우대거)<br>
+      부서진 전차와, 병든말, 갑옷과 투구 및 화살, 노, 화극, 방패, 창, 노, 수송용 소와 큰 수레를 유지하는데에<br><br>
+
+      十去其六(십거기륙)<br>
+      열에 여섯이 사라진다.<br><br>
+    </p><br>
+
+
+  <h3>[식량은 적지에서 충당하라]</h3>
+
+    <p>
+      善用兵者(선용병자)<br>
+      군대를 잘 쓰는 자는<br><br>
+
+      役不再籍(역부재적)<br>
+      군역을 두 번 징집하지 않고,<br><br>
+
+      糧不三載(양부삼재)<br>
+      식량을 세 번 실어나르지 않으며,<br><br>
+
+      取用于國(취용우국)<br>
+      나라에서 비용을 취하되,<br><br>
+
+      因糧于敵(인량우적)<br>
+      양식은 적으로부터 빼앗는다.<br><br>
+
+      故軍食可足也(고군식가족야)<br>
+      그러므로 군대의 식량이 충족될 수 있는 것이다.<br><br>
+    </p><br>
+
+
   <h3>[질질 끌면 패망한다]</h3>
 
     <p>
