--- a/The_economist.html
+++ b/The_economist.html
@@ -51,6 +51,31 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=G115duITIcg" target="_blank" title="삼프로TV_경제의신과함께">
+    보고싶은 것만 보는 시장, 주식, 채권, 원자재로 분리해보라</a><br>
+
+  <a href="https://www.youtube.com/watch?v=bJt973CI-qw" target="_blank" title="자유잍튜브THE">
+    중국에 큰 장 선다. 이 좋은 기회를 놓칠텐가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Td84VxwfROk" target="_blank" title="삼프로TV_경제의신과함께">
+    주식 양도차익 과세 손 볼 곳 많다! [더불어 민주당 정무위 간사 김병욱 의원]</a><br>
+
+  <a href="https://www.youtube.com/watch?v=HIwGq80EChs" target="_blank" title="JD부자연구소">
+    워렌버핏은 왜 에너지 기업을 샀을까</a><br>
+
+  <a href="https://www.youtube.com/watch?v=9uU5xE_7vNE" target="_blank" title="삼프로TV_경제의신과함께">
+    엔화 약세 위안화 강세.. 전세계는 RISK ON 상태</a><br>
+
+  <a href="https://www.youtube.com/watch?v=1HwULkqsOIU" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    보이지않지만, 균형이 깨지는 5가지 이유_하워드 막스</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Do24FktS47o" target="_blank" title="삼프로TV_경제의신과함께">
+    시중에 푼 돈 주식·부동산·금에 몰린다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Ev4hSVA8AVk" target="_blank" title="삼프로TV_경제의신과함께">
+    불안한 투자 심리.. 추가 상승 여력의 증거다</a><br>
+
   <a href="https://www.youtube.com/watch?v=5ZhoIaoJUWc" target="_blank" title="자유잍튜브THE">
     시총 2위는 누가될까? 시총 상위의 변화를 주목하라</a><br>
 
